src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Loop__LOOPlus_Tester__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this box will allow this user to run DDPs on a staging environment when testing is available.</inlineHelpText>
        <label>DDP Tester</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__dsPassword__c</fullName>
        <label>DocuSign Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__dsToken__c</fullName>
        <label>DocuSign API UserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingAnonWebActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingAnonWebActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingBestBets__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingBestBets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingEmailActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingEmailActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingGroupedWebActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingGroupedWebActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingInterestingMomentsList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingInterestingMomentsList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingScoringList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingScoringList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingStreamList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingStreamList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingWatchList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingWatchList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingWebActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingWebActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__Sales_Insight_Counter__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Marketo Sales Insight Welcome Counter</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wbsendit__Campaign_Monitor_User__c</fullName>
        <description>Used with the Campaign Monitor connector. Enter the users Campaign Monitor email address.</description>
        <inlineHelpText>Used with the Campaign Monitor connector. Enter the users Campaign Monitor email address.</inlineHelpText>
        <label>Campaign Monitor User</label>
        <type>Email</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>